[workspace]
members = [
    "renet",
    "demo_chat",
    "demo_bevy",
    "renetcode",
    "bevy_renet",
    "renet_visualizer",
    "renet_steam",
    "renet_netcode",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "^0.17" , default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11", "tonemapping_luts", "ktx2", "bevy_window", "zstd_rust"] }
bevy_app = "^0.17"
bevy_ecs = "^0.17"
bevy_time = "^0.17"
bevy_egui = "^0.38"
eframe = "^0.33"
egui = "^0.33"
serde = "^1"
bincode = "^1.3"
fastrand = "^2.3"
steamworks = "^0.12"
env_logger = "^0.11"
log = "^0.4"
bytes = "^1"
octets = "^0.3"
chacha20poly1305 = "^0.10"