[package]
name = "benchmark"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tcp"
path = "src/tcp.rs"

[[bin]]
name = "udp"
path = "src/udp.rs"

[[bin]]
name = "renet"
path = "src/renet.rs"

[dependencies]
serde = { version = "1.0.117", features = [ "derive" ] } 
bincode = "1.3.1"
renet = { path = "../" }
alto_logger = "0.3.6"
