[package]
name = "bevy_renet"
description = "Bevy plugin for the renet crate: Server/Client network library for multiplayer games with authentication and connection management"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucaspoffo/renet"
version = "3.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["netcode"]
netcode = ["dep:renet_netcode"]
steam = ["dep:renet_steam"]

[[example]]
name = "simple"
required-features = ["netcode"]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_time.workspace = true
renet = { path="../renet", features = ["bevy"] }
renet_netcode = { path="../renet_netcode", features = ["bevy"], optional = true }
renet_steam = { path="../renet_steam", features = ["bevy"], optional = true }

[dev-dependencies]
bevy = {workspace = true, default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11", "tonemapping_luts", "ktx2", "bevy_window", "zstd_rust"]}
bincode.workspace = true
serde = {workspace = true, features = ["derive"]}
