[package]
name = "bevy_renet"
description = "Bevy plugin for the renet crate: Server/Client network library for multiplayer games with authentication and connection management"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucaspoffo/renet"
version = "4.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["netcode"]
netcode = ["dep:renet_netcode"]
steam = ["dep:renet_steam"]

[[example]]
name = "simple"
required-features = ["netcode"]

[dependencies]
bevy_app = "0.18"
bevy_ecs = "0.18"
bevy_time = "0.18"
bevy_derive = "0.18"
renet = { path="../renet", version = "2.0.0" }
renet_netcode = { path="../renet_netcode", version = "2.0.0", optional = true }
renet_steam = { path="../renet_steam", version = "3.0.0", optional = true }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",
  "bevy_pbr",
  "x11",
  "tonemapping_luts",
  "ktx2",
  "zstd_rust",
  "bevy_window",
] }
bincode = "1.3"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
