[package]
name = "demo_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
transport = ["bevy_renet/transport"]
steam = ["bevy_renet/steam", "steamworks"]

[dependencies]
bevy = {version = "0.12", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_asset", "bevy_pbr", "x11", "tonemapping_luts", "ktx2", "zstd"]}
bevy_renet = { path = "../bevy_renet", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
bevy_egui = "0.23.0"
renet_visualizer = { path = "../renet_visualizer", features = ["bevy"] }
smooth-bevy-cameras = "0.10"
fastrand = "2.0.0"

steamworks = { git = "https://github.com/Noxime/steamworks-rs", rev = "a4dfe2a", optional = true }
