[package]
name = "demo_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
netcode = ["bevy_renet/netcode"]
steam = ["bevy_renet/steam", "dep:steamworks"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "serialize",
    "bevy_window"
]}

bevy_renet = { path = "../bevy_renet", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bevy_egui = "0.34"
renet_visualizer = { path = "../renet_visualizer", features = ["bevy"] }
fastrand = "2.0"
steamworks = { version = "0.11", optional = true }
