[package]
name = "demo_bevy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
default = ["netcode"]
netcode = ["bevy_renet/netcode"]
steam = ["bevy_renet/steam", "steamworks"]

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd_rust",
    "serialize",
    "bevy_window"
]}

bevy_renet = { path = "../bevy_renet", default-features = false }
renet_visualizer = { path = "../renet_visualizer", features = ["bevy"] }
serde = { workspace = true, features = ["derive"] }
bevy_egui.workspace = true
bincode.workspace = true
fastrand.workspace = true
steamworks = { workspace = true, optional = true }
