[package]
name = "demo_chat"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet = { path = "../renet" }
renet_netcode = { path = "../renet_netcode" }
renet_visualizer = { path = "../renet_visualizer" }
eframe = "0.31"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4.22"
env_logger = "0.11"
