[package]
name = "demo_chat"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet = { path = "../renet" }
renet_netcode = { path = "../renet_netcode" }
renet_visualizer = { path = "../renet_visualizer" }
eframe.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true
log.workspace = true
env_logger.workspace = true
