[package]
name = "demo_royale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bevy_rapier3d = "0.15.0"
bevy = { version = "0.7.0", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_pbr", "x11"] }
bevy_renet = { path = "../bevy_renet" }
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3.1"
smooth-bevy-cameras = "0.4.0"
bevy_egui = "0.14.0"
renet_visualizer = { path = "../renet_visualizer" }

