[package]
name = "rechannel"
version = "0.0.3"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
description = "Server/Client network library for reliable communication channels in multiplayer games"
keywords = ["gamedev", "networking"]
repository = "https://github.com/lucaspoffo/renet"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.11"
serde = { version = "1.0", features = [ "derive" ] } 
bincode = "1.3.1"
bytes = { version = "1.1", features = ["serde"] }

[dev-dependencies]
env_logger = "0.9.0"
