[package]
name = "renet"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
description = "Server/Client network library for multiplayer games with authentication and connection management"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lucaspoffo/renet"
version = "0.0.14"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bevy = ["dep:bevy_ecs", "dep:bevy_reflect"]
default = ["transport"]
transport = ["dep:renetcode"]
serde = ["dep:serde"]

[dependencies]
bevy_ecs = { version = "0.12", optional = true }
bevy_reflect = { version = "0.12", optional = true }
bytes = "1.1"
log = "0.4.17"
octets = "0.2"
renetcode = { path = "../renetcode", version = "0.0.10", optional = true }
serde = {version = "1.0", optional = true}

[dev-dependencies]
env_logger = "0.10.0"
