[package]
name = "renet"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
description = "Server/Client network library for multiplayer games with authentication and connection management"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lucaspoffo/renet"
version = "1.0.0"

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
bevy_ecs = { version = "0.16", optional = true }
bytes = "1.1"
log = "0.4.22"
octets = "0.3"

[dev-dependencies]
env_logger = "0.11"
renet_netcode = { path = "../renet_netcode" }