[package]
name = "renet"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
description = "Server/Client network library for multiplayer games with authentication and connection management"
edition = "2021"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lucaspoffo/renet"
version = "1.2.0"

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
bevy_ecs = { workspace = true, optional = true }
bytes.workspace = true
log.workspace = true
octets.workspace = true

[dev-dependencies]
env_logger.workspace = true
renet_netcode = { path = "../renet_netcode" }
