[package]
name = "renet_channel"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs", "dep:bevy_utils"]

[dependencies]
renet = { path = "../renet" }
bevy_ecs = { version = "0.11", optional = true }
bevy_utils = { version = "0.11", optional = true }
