[package]
name = "renet_channel"
version = "0.0.1"
keywords = ["gamedev", "networking", "transport"]
description = "channel transport for the renet crate: Server/Client network library for multiplayer games"
repository = "https://github.com/lucaspoffo/renet"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs", "dep:bevy_utils"]

[dependencies]
renet = { path = "../renet" }
bevy_ecs = { version = "0.12", optional = true }
bevy_utils = { version = "0.12", optional = true }
crossbeam = "0.8.2"
