[package]
name = "renet_core"
version = "0.0.11"
description = "Server/Client core network protocol library for multiplayer games"
keywords = ["gamedev", "networking", "cryptography"]
repository = "https://github.com/lucaspoffo/renet"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true }