[package]
name = "renet_netcode"
version = "1.2.0"
edition = "2021"
keywords = ["gamedev", "networking", "transport"]
description = "netcode transport for the renet crate: Server/Client network library for multiplayer games"
repository = "https://github.com/lucaspoffo/renet"
license = "MIT OR Apache-2.0"

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
renet = { path = "../renet" }
renetcode = { path = "../renetcode" }
bevy_ecs = { workspace = true, optional = true }
log.workspace = true
