[package]
name = "renet_steam"
version = "2.1.0"
keywords = ["gamedev", "networking", "transport"]
description = "steam transport for the renet crate: Server/Client network library for multiplayer games"
repository = "https://github.com/lucaspoffo/renet"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
renet = { version = "1.2.0", path = "../renet" }
steamworks = "0.12.2"
log = "0.4.22"
bevy_ecs = { version = "0.17", optional = true }

[dev-dependencies]
env_logger = "0.11"
