[package]
name = "renet_steam"
version = "2.1.0"
keywords = ["gamedev", "networking", "transport"]
description = "steam transport for the renet crate: Server/Client network library for multiplayer games"
repository = "https://github.com/lucaspoffo/renet"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
renet = { path = "../renet" }
steamworks.workspace = true
log.workspace = true
bevy_ecs = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
