[package]
name = "renet_udp"
version = "0.0.1"
description = "Server/Client network library for multiplayer games using Renet and UDP"
keywords = ["gamedev", "networking"]
repository = "https://github.com/lucaspoffo/renet"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# renet = { path = "../renet" }
renet = "0.0.3"
log = "0.4.11"
thiserror = "1.0"
