[package]
name = "renet_visualizer"
version = "1.1.0"
keywords = ["gamedev", "networking"]
description = "Egui metrics visualizer for the renet crate: Server/Client network library for multiplayer games"
repository = "https://github.com/lucaspoffo/renet"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
renet = { path = "../renet", version = "1.2.0" }
egui = "0.33"
