[package]
name = "renet_webtransport"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "networking", "transport"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucaspoffo/renet"
description = "Client transport for WebTransport"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
renet = { path = "../renet" }
bevy_ecs = { version = "0.12", optional = true }
futures-channel = "0.3"
send_wrapper = { version = "0.6.0", features = ["futures"] }


[dependencies.web-sys]
version = "0.3"
features = [
    "DomException",
    "ReadableStream",
    "WritableStream",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
]
[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
bevy = ["dep:bevy_ecs"]
worker = ["web-sys/Worker", "web-sys/MessageEvent", "web-sys/Url", "web-sys/Blob", "web-sys/BlobPropertyBag"]
