[package]
name = "renet_webtransport_server"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "networking", "transport"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lucaspoffo/renet"
description = "Server transport for WebTransport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
rustls = "0.21"
quinn = { version = "0.10", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "ring",
] }
bevy_ecs = { version = "0.11.0", optional = true }
h3-quinn = {version = "0.0.3", git = "https://github.com/hyperium/h3"}
h3-webtransport = {version = "0.1", git = "https://github.com/hyperium/h3"}
tokio = { version = "1.32", features = ["full"] }
log = "0.4.19"
http = "0.2"
renet = { path = "../renet" }
futures = "0.3"

[dependencies.h3]
version = "0.0.2"
git = "https://github.com/hyperium/h3"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]

[dev-dependencies]
env_logger = "0.10.0"

[features]
bevy = ["dep:bevy_ecs"]