[package]
name = "renetcode"
version = "0.0.5"
description = "Server/Client network protocol library for multiplayer games"
keywords = ["gamedev", "networking", "cryptography"]
repository = "https://github.com/lucaspoffo/renet"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.9.0"
# chacha20poly1305 aead does not have this feature available
aead = { version = "0.5", features = [ "rand_core" ] }
rand_chacha = { version = "0.3.1", features = [ "std" ] }
rand_core = { version = "0.6.0", features = ["getrandom"] }
