[package]
name = "renetcode"
version = "1.0.0"
description = "Server/Client network protocol library for multiplayer games"
keywords = ["gamedev", "networking", "cryptography"]
repository = "https://github.com/lucaspoffo/renet"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305.workspace = true
log.workspace = true