[package]
name = "demo_chat"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matcher = { path = "../matcher" }
renet = { path = "../../renet" }
renet_visualizer = { path = "../../renet_visualizer" }
renet_transport_steam = { path = "../../renet_transport_steam" }
steamworks = { path = "../../../steamworks-rs", version = "0.9.0" }
eframe = "0.19"
egui_extras = "0.19"
serde = { version = "1.0", features = [ "derive" ] } 
bincode = "1.3.1"
log = { version = "0.4.11", features = [ "std" ] }
env_logger = "0.9.0"
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
