[package]
name = "matcher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet = { path = "../../renet" }
serde = { version = "1.0", features = [ "derive" ] } 
serde_json = "1"
actix-web = "4.1"
actix-rt = "2.7"
env_logger = "0.10.0"

