[package]
name = "renet_webtransport_example"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "networking", "transport", "example"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lucaspoffo/renet"
description = "Client example transport for WebTransport"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
renet = { path = "../../renet" }
renet_webtransport ={ path = "../../renet_webtransport" }
console_error_panic_hook = "0.1"